--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <!-- Shared version number properties -->
     <properties>
         <org.springframework.version>4.3.3.RELEASE</org.springframework.version>
+        <spring-security.version>4.1.3.RELEASE</spring-security.version>
     </properties>
 
     <dependencies>
@@ -34,6 +35,25 @@
             <groupId>org.icefaces</groupId>
             <artifactId>icefaces-facelets</artifactId>
             <version>1.8.2</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.5</version>
         </dependency>
 
         <!--
