--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+		  http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+         version="2.5">
 
     <display-name>IPSCO TMS</display-name>
     <description>IPSCO TMS application</description>
@@ -13,7 +14,7 @@
     </context-param>
 
     <!--Spring Security-->
-  <!--  <filter>
+    <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
@@ -22,16 +23,14 @@
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
--->
-  <!--  <filter>
+<!--    <filter>
         <filter-name>loginRedirectFilter</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>loginRedirectFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
--->
+    </filter-mapping>-->
 
     <!-- Faces Servlet -->
     <servlet>
@@ -47,16 +46,7 @@
         </param-value>
     </context-param>
 
-    <!-- file upload Servlet -->
-    <servlet>
-        <servlet-name>uploadServlet</servlet-name>
-        <servlet-class>com.icesoft.faces.component.inputfile.FileUploadServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>uploadServlet</servlet-name>
-        <url-pattern>/uploadHtml</url-pattern>
-    </servlet-mapping>
+
 
 
     <!-- Persistent Faces Servlet -->
@@ -66,18 +56,7 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
-    <!--
-        <servlet>
-            <servlet-name>dispatcher</servlet-name>
-            <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-            <load-on-startup>3</load-on-startup>
-            <init-param>
-                <param-name>contextConfigLocation</param-name>
-                <param-value>classpath:spring/dispatcher-servlet.xml</param-value>
-            </init-param>
-        </servlet>
 
-    -->
     <!-- Blocking Servlet -->
     <servlet>
         <servlet-name>Blocking Servlet</servlet-name>
@@ -85,16 +64,8 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
-    <!-- Persistent Faces Servlet Mappings -->
-    <!--<servlet-mapping>
-        <servlet-name>notification</servlet-name>
-        <url-pattern>/notify/*</url-pattern>
-    </servlet-mapping>-->
 
-    <servlet-mapping>
-        <servlet-name>Persistent Faces Servlet</servlet-name>
-        <url-pattern>/xmlhttp/*</url-pattern>
-    </servlet-mapping>
+
 
     <servlet-mapping>
 
@@ -121,12 +92,10 @@
         </init-param>
         <load-on-startup>3</load-on-startup>
     </servlet>
-    <!--
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>*.html</url-pattern>
     </servlet-mapping>
-        -->
     <!-- Blocking Servlet Mapping -->
     <servlet-mapping>
         <servlet-name>Blocking Servlet</servlet-name>
@@ -226,10 +195,8 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            <!--classpath:spring/springSecurity.xml,
-            classpath:com/intersog/isg2tech/ipsco_tms/logic/applicationContext.xml,
-            classpath:com/intersog/isg2tech/ipsco_tms/excelLogic/applicationContext.xml,
-            classpath:com/intersog/isg2tech/ipsco_tms/dao/applicationContext.xml,-->
+
+            classpath:spring/springSecurity.xml,
             classpath:spring/applicationContext.xml
         </param-value>
     </context-param>
@@ -241,10 +208,7 @@
         </resource-env-ref-type>
     </resource-env-ref>
 
-    <error-page>
-        <error-code>404</error-code>
-        <location>/pageNotFound.html</location>
-    </error-page>
+
     <session-config>
         <session-timeout>60</session-timeout>
     </session-config>
